--- a/to-do-list-app/todos/templates/base.html
+++ b/to-do-list-app/todos/templates/base.html
@@ -25,6 +25,12 @@
             color: #4B5156;
         }
 
+        .task-items-wrapper {
+            padding-left: 5%;
+            padding-right: 5%;
+
+        }
+
         .container {
             max-width: 50%;
 
