--- a/crud-single-page/templates/base.html
+++ b/crud-single-page/templates/base.html
@@ -18,7 +18,7 @@
 
 
 <body>
-    <div class="container mt-5">
+    <div class="container" style="margin-top: 3%;">
         {% block content %}
         {% endblock content %}
     </div>
