--- a/crud-single-page/templates/main.html
+++ b/crud-single-page/templates/main.html
@@ -4,29 +4,30 @@
 
 {% block content %}
 
-<h1>CRUD Single Page</h1>
-
 <div class="row">
-    <div class="col-md-1">
+    <div class="col-md-2">
     </div>
 
-    <div class="col-md-10">
+    <div class="col-md-8">
+        <h1 class="text-center">CRUD Single Page</h1>
+
         <div class="card card-body">
-            <button class="btn btn-sm btn-primary" id="add-test">
+            <button class="btn btn-sm btn-primary mb-1" id="add-test">
                 Add test
             </button>
 
             <div class="form-wrapper hidden">
-                <select id="test-name" class="form-control">
+                <!-- <select id="test-name" class="form-control">
                     <option>------------</option>
                     <option>Flash Point</option>
                     <option>Water</option>
                     <option>Dislillation</option>
-                </select>
+                </select> -->
 
-                <input type="text" class="form-control" id="test-result">
+                <input id="test-name"   class="form-control m-3" type="text" placeholder="Task Name">
+                <input id="test-result" class="form-control m-3" type="text" placeholder="Percent Complete">
 
-                <button class="btn btn-sm btn-info" id="create-test">
+                <button class="btn btn-sm btn-info btn-block mb-3" id="create-test">
                     Add
                 </button>
             </div>
@@ -34,8 +35,8 @@
             <table class="table table-dark">
                 <thead>
                     <tr>
-                        <th scope="col">Test</th>
-                        <th scope="col">Result</th>
+                        <th scope="col">Tasks</th>
+                        <th scope="col">Percentage completed</th>
                     </tr>
                     </tr>
                 </thead>
@@ -47,7 +48,7 @@
         </div>
     </div>
 
-    <div class="col-md-1">
+    <div class="col-md-2">
     </div>
 </div>
 
