--- a/crud-single-page/templates/base.html
+++ b/crud-single-page/templates/base.html
@@ -1,5 +1,7 @@
 {% load static %}
 
+{% load bootstrap4 %}
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -22,6 +24,19 @@
 
 <body>
     <div class="container" style="margin-top: 3%;">
+        {% bootstrap_messages %}
+
+        <div class="navbar navbar-expand-lg">
+            <div class="right menu">
+                <ul class="navbar-nav">
+                    {% if user.is_authenticated %}
+                        <li class="nav-item"><a class="nav-link" href="{% url 'account_logout' %}">Sign Out</a></li>
+                    {% endif %}
+                </ul>
+            </div>
+        </div>
+
+
         {% block content %}
         {% endblock content %}
     </div>
